[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hex-tileable-diffusion"
version = "0.1.0"
description = "Hexagonal tileable diffusion pipeline built on top of diffusers."
requires-python = ">=3.10"
authors = [{ name = "Dhafin Fawwaz" }]
dependencies = []

[project.optional-dependencies]
inference = [
    "diffusers>=0.32.0,<1.0",
    "transformers>=4.40.0,<5.0",
    "accelerate>=0.30.0,<2.0",
    "safetensors>=0.4.0,<1.0",
    "Pillow>=10.0.0,<12.0",
    "numpy>=1.24.0,<3.0",
    "opencv-python-headless>=4.8.0,<5.0",
    "matplotlib>=3.7.0,<4.0",
    "peft>=0.10.0,<1.0",
]
evaluation = [
    "torchvision>=0.15.0,<1.0",
    "scipy>=1.11.0,<2.0",
    "piq>=0.7.0,<1.0",
    "lpips>=0.1.4,<1.0",
    "pytorch-fid>=0.3.0,<1.0",
    # Note: hex_tileable_diffusion.evaluation.metric also imports `from textile import Textile`.
    # The `textile` package is not on PyPI; install it separately.
]
dev = ["mypy>=1.10.0", "types-Pillow"]

[project.urls]
Repository = "https://github.com/DhafinFawwaz/hex-tileable-diffusion"

[tool.setuptools.packages.find]
include = ["hex_tileable_diffusion*"]
exclude = ["demos*", "tests*"]
